# general-purpose-function

./: .gitignore
python/: README.md  pyproject.toml
python/common/logger_function/: README.md  log_config.json  sample.py
python/common/logger_function/custom_logger/: setup_logger.py
python/common/progress_bar_function/: README.md  sample.py
python/common/progress_bar_function/custom_progress_bar/: progress_bar.py
python/kaggle/dataframe_function/: README.md  sample.py
python/kaggle/dataframe_function/reducing_dataframe/: reducing_dataframe.py
python/kaggle/split_function/: README.md  sample.py
python/kaggle/split_function/custom_split/: custom_timeseries_split.py
